# -social_media_analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  reddit_collector.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
data/: reddit_all_clean.csv  reddit_posts_clean.csv  reddit_sentiment_sample.csv  sample_posts.json
data/raw/: MachineLearning_posts.json  careerguidance_posts.json  datascience_posts.json  datasets_posts.json
social_media_analyzer/: LICENSE  README.md  app_mock.py
social_media_analyzer/backup/: README.md  requirements.txt
src/: analyzer.py  fetch_more_subreddits.sh  merge_reddit_data.py  prepare_data.py  topic_modeler.py
